Closed
Bug 1779975
Opened 3 years ago
Closed 3 years ago
Crash in [@ nsAccessibilityService::GetMarkupMapInfoFor]
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
104 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox102 | --- | unaffected |
| firefox103 | --- | unaffected |
| firefox104 | + | fixed |
People
(Reporter: gsvelto, Assigned: Jamie)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/d828182d-693d-4267-81cf-502ed0220716
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames of crashing thread:
0 libxul.so nsAccessibilityService::GetMarkupMapInfoFor const accessible/base/nsAccessibilityService.h:388
1 libxul.so mozilla::a11y::nsAccUtils::SetLiveContainerAttributes accessible/base/nsAccUtils.cpp:92
2 libxul.so mozilla::a11y::AccessibleWrap::HandleAccEvent accessible/android/AccessibleWrap.cpp:123
3 libxul.so mozilla::a11y::DocAccessibleWrap::HandleAccEvent accessible/android/DocAccessibleWrap.cpp:82
4 libxul.so nsEventShell::FireEvent accessible/base/nsEventShell.cpp:54
5 libxul.so mozilla::a11y::NotificationController::WillRefresh accessible/base/NotificationController.cpp:931
6 libxul.so nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2496
7 libxul.so mozilla::RefreshDriverTimer::TickRefreshDrivers layout/base/nsRefreshDriver.cpp:353
8 libxul.so mozilla::RefreshDriverTimer::Tick layout/base/nsRefreshDriver.cpp:369
9 libxul.so mozilla::VsyncRefreshDriverTimer::TickRefreshDriver layout/base/nsRefreshDriver.cpp:810
This appears to be a NULL pointer access and it's affecting Android alone for the time being.
| Assignee | ||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1757121
status-firefox102:
--- → unaffected
status-firefox103:
--- → unaffected
status-firefox104:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Updated•3 years ago
|
tracking-firefox104:
--- → +
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 3•3 years ago
|
||
Pushed by jteh@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4ed77b0692cc
Check whether a LocalAccessible has its own content before trying to get MarkupMapInfo from it. r=eeejay
Comment 5•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•