Bug 1779975: Check whether a LocalAccessible has its own content before trying to get MarkupMapInfo from it. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D152254